primer and infomax

--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -293,7 +293,7 @@ the KL-divergence between the joint distribution of the reconstructed sources an
 \only<1,2>{
 \begin{equation}
 \label{eq:klmin}
-	\dkl[P_{\vec{s}}(\widehat{\vec{s}}),\widehat{P}_{\vec{s}}(\widehat{\vec{s}})] = 
+	\dkl\lbrack P_{\vec{s}}(\widehat{\vec{s}}),\widehat{P}_{\vec{s}}(\widehat{\vec{s}})\rbrack = 
     \int d \, \widehat{\vec{s}} \; P_{\vec{s}}(\widehat{\vec{s}})
 		\ln \frac{P_{\vec{s}}(\widehat{\vec{s}})}{
 			\prod_{i = 1}^N \widehat{P}_{s_i}(\widehat{s}_i) }
