--- a/notes/05_infomax/2_infomax.tex
+++ b/notes/05_infomax/2_infomax.tex
@@ -31,27 +31,37 @@
 \item[]  
   Choosing the transformation such that their marginal distributions become uniform 
   simplifies the computations to find independent sources. i.e. choosing the transformation \\
-$\widehat{u}_i = \widehat{f}_i(\widehat{s}_i)$ such that
-$\widehat{P}_{u_i}(\widehat{u}_i) = \mathrm{const.}$
+  
+\begin{equation}
+\widehat{u}_i = \widehat{f}_i(\widehat{s}_i)
+\quad \text{such that} \quad
+\widehat{P}_{u_i}(\widehat{u}_i) = \mathrm{const.}
+\label{eq:transfconst}
+\end{equation}
 
 \end{itemize}
 
 \end{frame}
 
-\begin{frame}{Putting Infomax and density transformation together}
+\subsubsection{Putting Infomax and density transformation together}
 
-\slidesonly{
-$\widehat{u}_i = \widehat{f}_i(\widehat{s}_i)$ such that
-$\widehat{P}_{u_i}(\widehat{u}_i) = \mathrm{const.}$
-}
+\begin{frame}{\subsubsecname}
 
-\underline{Recap on Density Transformation}:
+\notesonly{\underline{Recap on Density Transformation}:\\}
 
 The transformation is found using \emph{conservation of probability}
 \begin{equation}
 	\widehat{P}_{u_i}(\widehat{u}_i) d \widehat{u}_i 
 	\; =  \; \widehat{P}_{s_i} (\widehat{s}_i) d \widehat{s}_i.
 \end{equation}
+for marginals, and
+\begin{equation}
+	\widehat{P}_{\vec u}(\widehat{\vec u}) d \widehat{\vec u} 
+	\; =  \; \widehat{P}_{\vec s} (\widehat{\vec s}) d \widehat{\vec s}.
+\end{equation}
+for the joint distribution.
+
+
 Using the general rule for density transformations and applying it here yields
 \begin{equation}
 \label{eq:conservation1}
@@ -66,6 +76,15 @@ where $\left|\frac{d \widehat{s}_i}{d \widehat{u}_i} \right|$ is
 called \emph{functional determinant} of the transformation
 $\widehat{f}_i$.
 
+Analogously for the joint distribution:
+\begin{equation}
+\label{eq:conservation1joint}
+	\widehat{P}_{\vec u}(\widehat{\vec u}) \quad
+	 =  \quad \bigg| 
+		\frac{d \widehat{\vec s}}{d \widehat{\vec u}} \bigg| 
+			 \widehat{P}_{\vec s}(\widehat{\vec s})
+\end{equation}
+
 \end{frame}
 
 \begin{frame}{Putting Infomax and density transformation together}
@@ -76,9 +95,16 @@ $\widehat{f}_i$.
 \pause
 
 Infomax requires a transformation resulting in a uniformly distributed
-variable with a constant density.
+variable with a constant density\notesonly{ (cf. \eqref{eq:transfconst}}.
 
-\question{What is density transformation for? }
+\slidesonly{
+\begin{equation}\widehat{u}_i = \widehat{f}_i(\widehat{s}_i) 
+\quad st. \quad
+\widehat{P}_{u_i}(\widehat{u}_i) = \mathrm{const.}
+\end{equation}
+}
+
+\question{What is the density transformation for? }
 
 \pause
 
@@ -96,7 +122,7 @@ variable with a constant density.
   \label{eq:dtufs}
 		\widehat{P}_{u_i} (\widehat{u}_i) \; = \;   
 		 \frac{1}{\big| \widehat{f}_i^{'} (\widehat{s}_i) \big|} 
-		\widehat{P}_{s_i}(\widehat{s}_i) \; \stackrel{!}{=} \; \text{const} \qquad \Rightarrow \qquad 
+		\widehat{P}_{s_i}(\widehat{s}_i) \; \stackrel{!}{=} \; \text{const.} \quad \Rightarrow \quad 
 		 \big| \widehat{f}_i^{'} (\widehat{s}_i) \big| =  a \widehat{P}_{s_i}(\widehat{s}_i) 
 \end{equation}
 and therefore
@@ -118,7 +144,7 @@ and therefore
 
 \svspace{-2mm}
 
-\question{why didn't we use the Inverse CDF technque?}
+\question{Why didn't we use the Inverse CDF technque?}
 
 \notesonly{
 We don't have an expression for the pdf of the variables to formulate the inverse of its cdf.
@@ -169,9 +195,9 @@ We don't have an expression for the pdf of the variables to formulate the invers
 One way to formulate the cost function for the Infomax algorithm is to maximize the mutual information directly:
 }
 
-$$
+\begin{equation}
 I(Y,X) = h(Y) - h(Y|X)
-$$
+\end{equation}
 
 \notesonly{By considering}\slidesonly{Consider} the following relationship between $Y$ and $X$:\\
 $Y = g(X;w) + \mathcal{N}$, where $g(\cdot)$ is some invertible transformation parametrized by $w$ and $\mathcal{N}$ is additive noise.
@@ -183,7 +209,7 @@ By taking the derivative with respect to the parameter $w$:
 \underbrace{\frac{\partial}{\partial w} h(Y|X)}_{= \frac{\partial}{\partial w} h(\mathcal{N}) = 0}
 \end{equation}
 
-Maximizing $I(Y,X)$ boils down to maximizing the entropy of the output $Y$. 
+Maximizing $I(Y,X)$ boils down to maximizing the (differential) entropy of the output $Y$. 
 
 %\notesonly{
 %We've seen how mutual information relates to the KL divergence, so we're going to use an approach 
@@ -203,55 +229,94 @@ Maximizing $I(Y,X)$ boils down to maximizing the entropy of the output $Y$.
 
 \slidesonly{
 \visible<2->{
-\vspace{-9mm}
-\hspace{7.8cm}
-\StickyNote[1.0cm]{
+\vspace{-14mm}
+\hspace{8.0cm}
+\StickyNote[1.7cm]{
 	\begingroup
-	\footnotesize
+	\scriptsize
+	%\begin{equation}
+		%\widehat{P}_{u_i} (\widehat{u}_i) =
+		 %\frac{1}{\big| \widehat{f}_i^{'} (\widehat{s}_i) \big|} 
+		 %\widehat{P}_{s_i}(\widehat{s}_i)
+	%\end{equation}
 	\begin{equation}
-		\widehat{P}_{u_i} (\widehat{u}_i) =
-		 \frac{1}{\big| \widehat{f}_i^{'} (\widehat{s}_i) \big|} 
-		 \widehat{P}_{s_i}(\widehat{s}_i)
+	{P}_{\vec u}(\widehat{\vec u}) d \widehat{\vec u} 
+	\; =  \; {P}_{\vec s} (\widehat{\vec s}) d \widehat{\vec s}
 	\end{equation}
+\vspace{-2mm}
+	\begin{equation}
+\label{eq:conservation1joint}
+	{P}_{\vec u}(\widehat{\vec u}) \;
+	 =  \; \bigg| 
+		\frac{d \widehat{\vec s}}{d \widehat{\vec u}} \bigg| 
+			 {P}_{\vec s}(\widehat{\vec s})
+\end{equation}
+\vspace{-2mm}
 	\begin{equation}
 		\widehat{P}_{u_i}(\widehat{u}_i) := \; \text{const}
 	\end{equation}
 	\endgroup
-}[3.5cm]
+}[3.cm] % width
 \vspace{-22mm}
 }
 }
 
-\begin{eqnarray}
-  \dkl & = & \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln \frac{P_{\vec{s}}(\widehat{\vec{s}})}{\prod_i \widehat{P}_{s_i}(\widehat{s}_i)}\\
+\slidesonly{
+\begingroup
+\small
+}
+\begin{align}
+  \dkl 
+  & = \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln \frac{P_{\vec{s}}(\widehat{\vec{s}})}{\prod_i \widehat{P}_{s_i}(\widehat{s}_i)} \slidesonly{\hspace{35mm}}\\
+\notesonly{  \intertext{Using the factorization in \eqref{eq:facts}:}}
   \pause
-  & = &  \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln 
+  & = \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln \frac{P_{\vec{s}}(\widehat{\vec{s}})}{\widehat{P}_{\vec{s}}(\widehat{\vec{s}})}
+\slidesonly{\\
+  \pause}
+\notesonly{  \intertext{Applying the density transformation:} }
+  %& = &  \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln 
+  %\frac
+  %{P_{\vec{s}}(\widehat{\vec{s}}) \quad \prod_i \frac{1}{f_i' (\widehat{s}_i)}}
+  %{\prod_i \widehat{P}_{s_i}(\widehat{s}_i) \quad \frac{1}{f_i' (\widehat{s}_i)}} \\
+    %\pause
+  & = \int d \, \widehat{\vec{s}} P_{\vec{s}}(\widehat{\vec{s}}) \ln 
   \frac
-  {P_{\vec{s}}(\widehat{\vec{s}}) \quad \prod_i \frac{1}{f_i' (\widehat{s}_i)}}
-  {\prod_i \widehat{P}_{s_i}(\widehat{s}_i) \quad \frac{1}{f_i' (\widehat{s}_i)}} \\
-    \pause
-  & = & \int d \widehat{\vec{u}} P_{\vec{u}} (\widehat{\vec{u}}) 
+  {
+  \Big|  \frac{d \widehat{\vec u}}{d \widehat{\vec s}} \Big|
+  {P}_{\vec u}(\widehat{\vec u}) 
+  }
+  {
+    \Big|  \frac{d \widehat{\vec u}}{d \widehat{\vec s}} \Big|
+  \widehat{P}_{\vec u}(\widehat{\vec u}) 
+  }
+\slidesonly{\\
+  \pause}
+\notesonly{  \intertext{The same factorization in \eqref{eq:facts} equally applies to the transformed variables $\vec u$:} }
+  & = \int d \widehat{\vec{u}} P_{\vec{u}} (\widehat{\vec{u}}) 
   \ln 
   \frac
   {P_{\vec{u}} (\widehat{\vec{u}}) }
   {\prod_i  \widehat{P}_{u_i}(\widehat{u_i})} \\
-  & = & 
+  & = 
   \underbrace{
 	  \int d \widehat{\vec{u}} P_{\vec{u}} (\widehat{\vec{u}}) 
 	  \ln 
 	  {P_{\vec{u}} (\widehat{\vec{u}}) }
-  }_{= -H \; \text{(negative entropy)}}\\
-  & & \quad -
+  }_{= -H \; \text{(negative entropy)}}\notesonly{\\
+  & \quad -}\slidesonly{\;\; - \;\;}
   \underbrace{
 	  \int d \widehat{\vec{u}} P_{\vec{u}} (\widehat{\vec{u}}) 
-	  \Bigg( \ln
+	  \bigg( \ln
 	  {\prod_{i=1}^{N}
-	  \underbrace{ 
+	  \overbrace{ 
 		\widehat{P}_{u_i}(\widehat{u_i}) 
-	  }_{\substack{\text{const.\;}\notesonly{ a \\\text{\;see \eqref{eq:dtufs}}}}}} 
-	  \Bigg)
+	  }^{\substack{\text{const.\;}\notesonly{ a \\\text{\;see \eqref{eq:dtufs}}}}}} 
+	  \bigg)
 	  }_{\text{constant}}
-\end{eqnarray}
+\end{align}
+\slidesonly{
+\endgroup
+}
 
 \end{frame}
 
