--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -75,7 +75,7 @@ However, if it were an unbiased coin, we would be equally uncertain of the outco
 
 We do not have an equivalent measure for continuous random variables. 
 However we can resort to the \emph{differential entropy} $h(X)$ of a \textbf{continuous} variable $X$
-\footnote{if interested, \citealp[see][Ch~10.2]{haykin1994neural} for the relation betweenn $H(X)$ and $h(X)$.}:
+\footnote{if interested, \citealp[see][Ch~10.2]{haykin1994neural} for the relation between $H(X)$ and $h(X)$.}:
 
 \begin{equation}
 \label{eq:entropydiff}
@@ -256,7 +256,7 @@ for the continuous case.
 
 \pause 
 
-The KL divergence does not qualify as a distance metric, as it is not symmetric, but it still satisfies other useful metric propertie:
+The KL divergence does not qualify as a distance metric, as it is not symmetric, but it still satisfies other useful metric properties:
 \begin{enumerate}
 \item non-negative
 \item $D_{KL}\lbrack\,p\, ||\, q\,\rbrack = 0$ iff. $p = q$.
@@ -309,7 +309,7 @@ Recalling the factorization \notesonly{in \eqref{eq:facts} which is based on the
 }
 \only<2->{
 
-In spite of this being a justified approach for blind source separation, it requires a paramtereized density estimate which would make this approach computationally costly.
+In spite of this being a justified approach for blind source separation, it requires a parametrized density estimate which would make this approach computationally costly.
 }
 \only<3>{
 \slidesonly{
