--- a/notes/05_infomax/2_infomax.tex
+++ b/notes/05_infomax/2_infomax.tex
@@ -144,7 +144,7 @@ and therefore
 
 \svspace{-2mm}
 
-\question{Why didn't we use the Inverse CDF technque?}
+\question{Why didn't we use the Inverse CDF technique?}
 
 \notesonly{
 We don't have an expression for the pdf of the variables to formulate the inverse of its cdf.
@@ -366,7 +366,7 @@ Example for $\vec e_i$ for selecting the $i$-th reconstruction with 2D observati
 
 This tells us that 
 \begin{itemize}
-\item we can produce statistally independent sources $\widehat {\vec s}$ 
+\item we can produce statistically independent sources $\widehat {\vec s}$ 
 by maximizing the entropy of their transformation $\vec u$.
 \only<3>{
 \item maximizing the entropy of $\vec u$ is equivalent minimizing \notesonly{\eqref{eq:klmin}}
