--- a/notes/05_infomax/3_cost.tex
+++ b/notes/05_infomax/3_cost.tex
@@ -177,7 +177,7 @@ in terms that depend on components in $\vec W$:
 }
 
 
-This enables us to define the generlization cost $E^G$ for model selection:
+This enables us to define the generalization cost $E^G$ for model selection:
 \begin{equation} \tag{generalization cost}
 	E^G = \ln |\det \vec W\,| + \int d \vec{x} P_{\vec{x}} (\vec{x})
 		\Bigg\{ \sum\limits_{l = 1}^N \ln
