--- a/notes/05_infomax/bibliography.bib
+++ b/notes/05_infomax/bibliography.bib
@@ -14,3 +14,12 @@
   year={1994},
   publisher={Prentice Hall PTR}
 }
+@inproceedings{amari1998natural,
+  title={Why natural gradient?},
+  author={Amari, Shun-Ichi and Douglas, Scott C},
+  booktitle={Proceedings of the 1998 IEEE International Conference on Acoustics, Speech and Signal Processing, ICASSP'98 (Cat. No. 98CH36181)},
+  volume={2},
+  pages={1213--1216},
+  year={1998},
+  organization={IEEE}
+}
