--- a/notes/05_infomax/4_gradient.tex
+++ b/notes/05_infomax/4_gradient.tex
@@ -81,6 +81,7 @@ with an individual cost $e^{(\alpha)}$ for each observation $\vec{x}^{(\alpha)}$
 		\widehat{f}_l^{'} \Bigg( \sum\limits_{k = 1}^N 
 		\mathrm{w}_{lk} \mathrm{x}_k^{(\alpha)} \Bigg)
 \end{equation}
+The gradient becomes:
 \begin{equation}
 	\frac{\partial e^{(\alpha)}}{\partial \mathrm{w}_{ij}}
 	= \underbrace{ \big( \vec{W}^{-1} \big)_{ji} }_{
@@ -92,6 +93,7 @@ with an individual cost $e^{(\alpha)}$ for each observation $\vec{x}^{(\alpha)}$
 			\mathrm{w}_{ik} \mathrm{x}_k^{(\alpha)} \bigg)}
 			 }_{ \coloneqq \varphi_i^{(\alpha)} }
 		\cdot \mathrm{x}_j^{(\alpha)}
+		\label{eq:gradstandardonline}
 \end{equation}
 this can be used for \emph{batch-learning}:
 \begin{equation}
@@ -146,18 +148,114 @@ or using \emph{on-line-learning} by updating $w_{ij}$ with each individual cost 
 
 \subsection{Natural Gradient Learning}
 
+\subsubsection{Motivation}
+
 \begin{frame}{\subsecname}
 
-The natural gradient allows for an efficient \& fast learning rule (no matrix inversions
-  necessary!) to do steepest ascent under normalized step size (cf. lecture slides 2.2.1 for details)
+\notesonly{
+The justification for natural gradient\footnote{For a proper explanation and justification for the natural gradient, \citep{amari1998natural}} vs. standard gradient:
+} 
 
-Linear transformations: $d \vec{W}, \vec{W}$
-\begin{figure}[h]
-  \centering
-\includegraphics[width=10cm]{img/section2_fig18}  
-  %\caption{Illustration of gradient descent in transformed coordinate system}
-  \label{fig:NatGrad}
-\end{figure}
+\only<1->{
+The standard gradient\notesonly{ operates on the notion that }\slidesonly{: }the shortest distance between two points is a straight line.\\ 
+}
+
+\notesonly{
+A simple counterexample:\\
+
+The shortest distance between two points on a map is not a straight line but rather the shortest ``arc'' connecting those two points on a globe. The natural gradient tries to account for the properties of the surface of the cost function and tries to follow the ``arc'' on that surface.
+}
+
+\begin{minipage}{0.45\textwidth}
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{img/map_icon_markers}  
+	\end{center}
+	\notesonly{\captionof{figure}{Distances from the viewpoint of the standard gradient.}}
+\end{minipage}
+\hfill
+\begin{minipage}{0.45\textwidth}
+	\begin{center}
+		\includegraphics<2>[width=0.9\textwidth]{img/globe-icon-2-publicdomain_markers}  
+	\end{center}
+	\notesonly{\captionof{figure}{Taking the ``arc'' of the surface into account.}}
+\end{minipage}
+
+\end{frame}
+
+\subsubsection{Standard gradient vs. natural gradient}
+
+\begin{frame}{\subsubsecname}
+
+\only<1>{
+Online learning with standard gradients
+\notesonly{requires us to construct a learning rate schedule to ensure we stop overshooting the solution. A decaying learning rate strategy is easier to control if the magnitudes of the gradients are more ``behaved'' you don't suddenly get strong magnitudes that could lead to overshooting the solution. 
+}
+\slidesonly{
+\begin{itemize}
+\item can overshoot the solution if we keep a constant learning rate
+\item use a decaying learning rate schedule to prevent overshooting
+\item a decaying learning rate strategy still sensitive to the magnitude of the gradient,
+\end{itemize}
+still prone to overshooting.
+}
+}
+\only<2->{
+The natural gradient enables \emph{comparable learning steps over time}.
+It allows for a more stable, therefore efficient, and faster learning rule (no matrix inversion for $\vec W$ in Infomax'
+  necessary) to do steepest ascent under normalized step size.%\notesonly{ (cf. lecture slides 2.2.1 for details)}
+  
+\slidesonly{
+\only<2>{
+\begin{equation}
+	\frac{\partial e^{(\alpha)}}{\partial \mathrm{w}_{ij}}
+	= \underbrace{ \big( \vec{W}^{-1} \big)_{ji} }_{
+		\substack{ \text{costly} \\ \text{computation}} }
+		+ \underbrace{  
+			\frac{ \widehat{f}_i^{''} \bigg( \sum\limits_{k = 1}^N 
+				\mathrm{w}_{ik} \mathrm{x}_k^{(\alpha)} \bigg)
+			}{\widehat{f}_i^{'} \bigg( \sum\limits_{k = 1}^N 
+			\mathrm{w}_{ik} \mathrm{x}_k^{(\alpha)} \bigg)}
+			 }_{ \coloneqq \varphi_i^{(\alpha)} }
+		\cdot \mathrm{x}_j^{(\alpha)}
+		%\label{eq:gradstandardonline}
+\end{equation}
+}
+}
+  
+\begin{equation}
+	\Delta \vec{W} = \varepsilon \frac{ \overbrace{\partial e}^{
+		\substack{	\text{``original''} \\ 
+				\text{gradient}} }}{\partial \vec{W}}
+		\underbrace{ \vec{W}^\top \vec{W} }_{
+			\substack{	\text{normalization} \\
+					\text{of step size}} }
+					\label{eq:addnatgradient}
+\end{equation}
+}
+
+\only<3>{
+\notesonly{Applying \eqref{eq:addnatgradient} to the standard gradient in \eqref{eq:gradstandardonline}, }the natural gradient for Infomax becomes:
+
+\begin{equation}
+	\Delta \mathrm{w}_{ij} = \varepsilon \sum\limits_{l = 1}^N
+	\left\{ \delta_{il} 
+	+ \frac{ \widehat{f}_i^{''} \Big( \sum\limits_{k = 1}^N 
+			\mathrm{w}_{ik} \mathrm{x}_k^{(\alpha)} \Big)
+			}{\widehat{f}_i^{'} \Big( \sum\limits_{k = 1}^N 
+			\mathrm{w}_{ik} \mathrm{x}_k^{(\alpha)} \Big)}
+	\sum\limits_{k = 1}^N \mathrm{w}_{lk} \mathrm{x}_k^{(\alpha)}
+	\right\} \mathrm{w}_{lj}
+\end{equation}
+}
+
+
+\slidesonly{
+\begin{center}
+	\includegraphics<1>[width=0.5\textwidth]{img/section2_fig17}  
+\end{center}
+}
+
+
 
 \end{frame}
 
@@ -165,12 +263,25 @@ Linear transformations: $d \vec{W}, \vec{W}$
 % -----------------------------------------------------------------------------
 \newpage
 
+\subsection{Choice of transfer function}
+
+\begin{frame}{\subsecname}
 %\subsection{Choice of $\widehat{f}_i$:}
 The true distribution is typically unknown, 
 but likely to have a probability density with one maximum (i.e. peaky function)
-$\leadsto$ cdf of this unknown source distribution will be roughly sigmoidal
-%\\\\
-Typical choice to resemble the cdf of such a peaky function:
+$\leadsto$ cdf of this unknown source distribution will be roughly sigmoidal.\\
+
+A typical choice to resemble the cdf of such a peaky function:
+
+\slidesonly{
+\begin{center}
+	\includegraphics<1>[width=0.7\textwidth]{img/section2_fig15}  
+\end{center}
+}
+\only<2>{
+
+\svspace{-10mm}
+
 \begin{equation} \tag{logistic function}
 	\widehat{f}_{(y)} = \frac{1}{1 + \exp(-y)}
 \end{equation}
@@ -189,3 +300,6 @@ Observation: ICA is fairly robust against false choice of $\widehat{f}$.
 		\itl estimate parameters in addition to $\vec{W}$
 	\end{itemize}
 \end{itemize}
+}
+
+\end{frame}
